# canvas-mcp-server

./: README.md  pyproject.toml
src/: server.py
