[project]
name = "canvas-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for Canvas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx",
    "python-dotenv",
    "canvasapi"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canvas_mcp_server"]
